--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.3",
     "jest": "25.4.0",
+    "lodash": "^4.17.15",
     "prettier": "2.0.5"
   }
 }
