--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bottender": "1.4.1",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.3",
     "jest": "25.4.0",
     "lodash": "^4.17.15",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "qs": "^6.9.4"
   }
 }
