--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bottender dev",
     "lint": "eslint . ",
-    "start": "bottender start",
-    "test": "jest"
+    "test": "jest",
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bottender": "1.4.1",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.3",
+    "express": "^4.17.1",
     "jest": "25.4.0",
     "lodash": "^4.17.19",
+    "nodemon": "^2.0.4",
     "prettier": "2.0.5",
     "qs": "^6.9.4"
   }
